--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -1025,6 +1025,10 @@ small{
 	top:1px;
 	left:1px
 }
+.avatar-img {
+	width: 43px;
+	height: 43px;	
+}
 .card-user-level{
 	font-size: 10px;
 	top:40px;
