--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -350,8 +350,46 @@ $brown:#AD914E;
 	}
 }
 // theme dark end
-body{
-	overflow-x:hidden;
+#right-sidebar{
+	height: 100vh;
+}
+#chatbox-header{
+	width: 100%;
+	height:55px;
+	top:0;
+	left:0;
+	border-bottom:1px solid $golden-dark;
+}
+#chatbox-footer{
+	width:100%;
+	height: 55px;
+	bottom:0;
+	left:0;
+}
+#send-msg{
+	background-color:$dark;
+	border:none;
+	border-top-left-radius:0;
+	border-bottom-left-radius:0
+}
+#input-msg{
+	background-color:$dark;
+	border:none;
+}
+#chat-body{
+	overflow-y: scroll;
+	height:650px;
+	padding-top:10px
+}
+.message-box{
+	padding: 10px;
+	background-color:$dark;
+	border-radius:10px;
+	min-width: 85%;
+	min-height:55px
+}
+#chat-body ul li{
+	margin-bottom: 10px
 }
 .text-disable{
 	color:#95a4a7;
@@ -386,12 +424,12 @@ body{
 	font-size: 25px
 }
 #chat-box{
-	height:80%;
+	// height:80%;
 	margin-bottom: 3%;
 }
 .right-sidebar-footer{
 	display: flex;
-	height:15%;
+	height:10%;
 	align-items: center;
 	justify-content: center;
 	// padding:50px;
