--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -1150,6 +1150,10 @@ small{
 	white-space: nowrap;
 	overflow: hidden;
 }
+.bheader-profile-name{
+	font-weight: 700;
+	top:10px;
+}
 .card-profile-name-left{
 	left:70px;
 }
