--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -351,7 +351,34 @@ $brown:#AD914E;
 }
 
 // theme dark end
-
+tbody > tr:hover{
+	cursor:pointer;
+	background-color:#23272d;
+	transition: 0.5s;
+}
+.vertical-center{
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+tbody > tr > td{
+	padding:15px 0 !important;
+}
+.sticky-header{
+	border-bottom-left-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+	border-bottom: none !important;
+}
+.overflow-box{
+	height:350px;
+	overflow-y:scroll;
+	border-top-left-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+	border-top:none !important;
+}
 #chatbox-header{
 	width: 100%;
 	height:55px;
@@ -377,7 +404,7 @@ $brown:#AD914E;
 }
 #chat-body{
 	overflow-y: scroll;
-	height:60vh;
+	height:65vh;
 	padding-top:10px
 }
 .message-box{
