--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -349,7 +349,14 @@ $brown:#AD914E;
 		background:$dark;
 	}
 }
-
+.accordion-button:focus {
+    box-shadow: none;
+    border-color: rgba(0,0,0,.125);
+}
+.accordion-button:after { 
+  
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
 // theme dark end
 tbody > tr:hover{
 	cursor:pointer;
@@ -861,6 +868,9 @@ small{
 }
 .bg-dark-red{
 	background:$deep-red;
+}
+.bg-light-gray{
+	background-color:$light-gray;
 }
 .small-card-header{
 	height:45.5px;
