--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -358,6 +358,25 @@ $brown:#AD914E;
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 // theme dark end
+.mobHeader-profile-name{
+	top:0;
+	font-weight: 700;
+	left:55px;
+	width: 100px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.mobHeader-user-level{
+	left:55px;
+	top:25px;
+	font-size:12px;
+}
+.mobHeader-box{
+	background:0 !important;
+	border:none !important;
+	padding:0 12px !important;
+}
 tbody > tr:hover{
 	cursor:pointer;
 	background-color:#23272d;
@@ -1005,6 +1024,9 @@ small{
 	padding: 16px 8px;
 	border-radius: 9px;
 	width:100%;
+}
+.navbar-nav li{
+	margin-bottom: 15px
 }
 .navbar-nav .dropdown-menu{
 	position:absolute !important;
