--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -1486,6 +1486,28 @@ div.content {
 	font-weight: bold;
 	font-size:10.5px
 }
+@media screen and (min-width:576px){
+	.carosel-inner{
+		display: flex !important;
+	}
+	.carosel-item{
+		display: block !important;
+		margin-right:0 !important;
+		flex:0 0 calc(100%/3) !important;
+	}
+}
+@media (min-width: 1025px) and (max-width: 1280px){ 
+            .p-carousel-item{
+            	flex: 0 0 25% !important
+            }
+        } 
+          
+        /* Media Query for Large screens */ 
+        @media (min-width: 1281px) { 
+            .p-carousel-item{
+            	flex: 0 0 25% !important
+            }
+        } 
 @media screen and (max-width: 1367px) {
 	.b-header-links li{
 		margin-right: 10px;
