--- a/front/src/assets/scss/main.scss
+++ b/front/src/assets/scss/main.scss
@@ -1652,11 +1652,17 @@ small{
   .board-header{
   	display:none;
   }
+  #game{
+  	display: none
+  }
 }
 
 /* For landscape, we want the toolbar stick on the left */
 
 @media screen and (orientation: landscape){
+	#game{
+		display:block;
+	}
 	.bheader-profile-name{
 		font-weight: normal;
 		font-size: 12px;
@@ -1683,6 +1689,24 @@ small{
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
 }
-
+#overlay h3{
+	text-transform: uppercase;
+}
+#sidebar-nav{
+	height:85vh !important;
+}
+.screen-center{
+	margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center
+}
+.fs-large{
+	font-size: 80px;
+	font-weight: bold
+}
 
 
