--- a/front/public/assets/scss/main.scss
+++ b/front/public/assets/scss/main.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap/scss/_functions.scss';
 @import 'bootstrap/scss/_variables.scss';
 @import 'bootstrap/scss/_mixins.scss';
-@import "bootstrap/scss/bootstrap"; 
+@import "bootstrap/scss/bootstrap";
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0";
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0";
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0";
@@ -25,6 +25,8 @@ $light-green:#5EB656;
 $brown:#AD914E;
 // theme dark
 [data-bs-theme="dark"] {
+	//primevue dark
+	
 	.main-wrapper{
 		background:$midnight;
 	}
@@ -178,7 +180,7 @@ $brown:#AD914E;
 	.tabs{
 		background: linear-gradient(243.94deg, #181B1F 24.7%, rgba(46, 52, 60, 0.23) 78.12%);
 	}
-	.tabs li a{
+	.tabs li a {
 		background: linear-gradient(135.91deg, #DEB864 35.32%, #FFF3D8 51.23%, #DEB864 69.05%);
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
